Fixed body covering search titles css.css

--- a/web/css.css
+++ b/web/css.css
@@ -7,6 +7,11 @@
     z-index: 11;
 }
 
+body{
+	width:0%
+	
+}
+
 .search {
     position: fixed; 
     left: 50%;
